--- a/src/ChurchSystem.App/Views/Donation/Index.cshtml
+++ b/src/ChurchSystem.App/Views/Donation/Index.cshtml
@@ -5,11 +5,11 @@
 }
 
 <a class="ui right floated small primary labeled icon button" asp-action="Create">
-    <i class="money bill alternate outline icon"></i>
+    <i class="add icon"></i>
     Register new
 </a>
 
-<h3>Donations</h3>
+<h3 class="ui header">Donations</h3>
 
 <table class="ui blue single line selectable table">
     <thead>
