--- a/src/ChurchSystem.App/Views/Member/Index.cshtml
+++ b/src/ChurchSystem.App/Views/Member/Index.cshtml
@@ -5,11 +5,11 @@
 }
 
 <a class="ui right floated small primary labeled icon button" asp-action="Create">
-    <i class="user icon"></i>
-    Add User
+    <i class="add icon"></i>
+    Add member
 </a>
 
-<h3>Members</h3>
+<h3 class="ui header">Members</h3>
 
 <table class="ui blue single line selectable table">
     <thead>
