--- a/src/ChurchSystem.App/Views/Role/Create.cshtml
+++ b/src/ChurchSystem.App/Views/Role/Create.cshtml
@@ -12,6 +12,7 @@
 <div class="ui divider"></div>
 <partial name="/Views/Components/_ValidationSummary.cshtml" />
 <form asp-action="Create" class="ui form segment">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="field">
         <div class="two fields">
             <div class="field">
@@ -21,16 +22,14 @@
             </div>
         </div>
     </div>
-    <div class="form-group">
-        <a class="ui button" asp-action="Index">
-            <i class="arrow left icon"></i>
-            Back
-        </a>
-        <button type="submit" class="ui submit primary button">
-            <i class="check icon"></i>
-            Create
-        </button>
-    </div>
+    <a class="ui button" asp-action="Index">
+        <i class="arrow left icon"></i>
+        Back
+    </a>
+    <button type="submit" class="ui submit primary button">
+        <i class="check icon"></i>
+        Create
+    </button>
 </form>
 
 @section Scripts {
