--- a/src/ChurchSystem.App/Views/Donation/Delete.cshtml
+++ b/src/ChurchSystem.App/Views/Donation/Delete.cshtml
@@ -1,45 +1,33 @@
 ﻿@model ChurchSystem.App.ViewsModels.DonationViewModel
 
+<style>
+    [data-position="right center"][data-tooltip]:after{
+        color: red;
+        font-weight: bold;
+    }
+</style>
+
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete donation";
 }
 
-<h1>Delete</h1>
+<h3 class="ui header">
+    <i class="money bill alternate outline icon"></i>
+    Delete denation
+</h3>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>DonationViewModel</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Date)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Date)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Amount)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Amount)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Type)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Type)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Member)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Member.Name)
-        </dd class>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+<div class="ui divider"></div>
+
+@{ await Html.RenderPartialAsync("_DonationDetailsPartial.cshtml"); }
+
+<form asp-action="Delete">
+    <input type="hidden" asp-for="Id" />
+    <a class="ui button" asp-action="Index">
+        <i class="arrow left icon"></i>
+        Back
+    </a>
+    <button type="submit" class="ui red button" data-tooltip="Are you sure you want to delete this?" data-position="right center">
+        <i class="trash alternate outline icon"></i>
+        Delete
+    </button>
+</form>
