--- a/src/ChurchSystem.App/Views/Group/Create.cshtml
+++ b/src/ChurchSystem.App/Views/Group/Create.cshtml
@@ -1,32 +1,36 @@
 ﻿@model ChurchSystem.App.ViewsModels.GroupViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create new group";
 }
 
-<h1>Create</h1>
+<h3 class="ui header">
+    <i class="users icon"></i>
+    Create new group
+</h3>
 
-<h4>GroupViewModel</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+<div class="ui divider"></div>
+<partial name="/Views/Components/_ValidationSummary.cshtml" />
+<form asp-action="Create" class="ui form segment">
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    <div class="field">
+        <div class="two fields">
+            <div class="field">
+                <label asp-for="Description" class=""></label>
+                <input asp-for="Description" class="" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <a class="ui button" asp-action="Index">
+        <i class="arrow left icon"></i>
+        Back
+    </a>
+    <button type="submit" class="ui submit primary button">
+        <i class="check icon"></i>
+        Create
+    </button>
+</form>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
