Adaptations for code reuse.

--- a/src/ChurchSystem.App/Views/Donation/Delete.cshtml
+++ b/src/ChurchSystem.App/Views/Donation/Delete.cshtml
@@ -1,20 +1,10 @@
 ﻿@model ChurchSystem.App.ViewsModels.DonationViewModel
 
-<style>
-    [data-position="right center"][data-tooltip]:after{
-        color: red;
-        font-weight: bold;
-    }
-</style>
-
 @{
     ViewData["Title"] = "Delete donation";
 }
 
-<h3 class="ui header">
-    <i class="money bill alternate outline icon"></i>
-    Delete denation
-</h3>
+<h3 class="ui header">Delete denation</h3>
 
 <div class="ui divider"></div>
 
