--- a/src/ChurchSystem.App/Views/Member/Delete.cshtml
+++ b/src/ChurchSystem.App/Views/Member/Delete.cshtml
@@ -1,20 +1,10 @@
 ﻿@model ChurchSystem.App.ViewsModels.MemberViewModel
 
-<style>
-    [data-position="right center"][data-tooltip]:after{
-        color: red;
-        font-weight: bold;
-    }
-</style>
-
 @{
     ViewData["Title"] = "Delete member";
 }
 
-<h3 class="ui header">
-    <i class="user outline icon"></i>
-    Delete member
-</h3>
+<h3 class="ui header">Delete member</h3>
 
 <div class="ui divider"></div>
 
