--- a/src/ChurchSystem.App/Views/Member/Details.cshtml
+++ b/src/ChurchSystem.App/Views/Member/Details.cshtml
@@ -4,10 +4,7 @@
     ViewData["Title"] = "Member details";
 }
 
-<h3 class="ui header">
-    <i class="user outline icon"></i>
-    Member details
-</h3>
+<h3 class="ui header">Member details</h3>
 
 <div class="ui divider"></div>
 
