--- a/src/ChurchSystem.App/Views/Components/_ValidationSummary.cshtml
+++ b/src/ChurchSystem.App/Views/Components/_ValidationSummary.cshtml
@@ -5,7 +5,7 @@
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         <div class="content">
             <div class="header">
-                Um ou mais campos obrigatórios não foram preenchidos
+                One or more required fields have not been filled.
             </div>
             <div style="padding-top: 0px; margin-bottom: -15px;" asp-validation-summary="All"></div>
         </div>
