--- a/src/ChurchSystem.App/Views/Donation/Create.cshtml
+++ b/src/ChurchSystem.App/Views/Donation/Create.cshtml
@@ -4,13 +4,11 @@
     ViewData["Title"] = "Register new donation";
 }
 
-<h3 class="ui header">
-    <i class="money bill alternate outline icon"></i>
-    Register new donation
-</h3>
+<h3 class="ui header">Register new donation</h3>
 
 <div class="ui divider"></div>
 <partial name="/Views/Components/_ValidationSummary.cshtml" />
+
 <form asp-action="Create" class="ui form segment">
     @{ await Html.RenderPartialAsync("_DonationFormPartial.cshtml"); }
     <a class="ui button" asp-action="Index">
