--- a/src/ChurchSystem.App/Views/Member/Edit.cshtml
+++ b/src/ChurchSystem.App/Views/Member/Edit.cshtml
@@ -1,29 +1,26 @@
 ﻿@model ChurchSystem.App.ViewsModels.MemberViewModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit member";
 }
 
-<h4>Edit member</h4>
+<h3 class="ui header">Edit member</h3>
 
-<hr />
-<div class="row">
-    <div class="col-12">
-        <form asp-action="Edit">
-            @{ await Html.RenderPartialAsync("_MemberFormPartial.cshtml"); }
-            <div class="form-group">
-                <a class="btn btn-secondary" asp-action="Index">
-                    <i class="fa fa-arrow-left"></i>
-                    Back
-                </a>
-                <button type="submit" class="btn btn-primary">
-                    <i class="fa fa-check"></i>
-                    Save
-                </button>
-            </div>
-        </form>
-    </div>
-</div>
+<div class="ui divider"></div>
+<partial name="/Views/Components/_ValidationSummary.cshtml" />
+
+<form asp-action="Edit" class="ui form segment">
+    @{ await Html.RenderPartialAsync("_MemberFormPartial.cshtml"); }
+    <input type="hidden" asp-for="Id" />
+    <a class="ui button" asp-action="Index">
+        <i class="arrow left icon"></i>
+        Back
+    </a>
+    <button type="submit" class="ui submit primary button">
+        <i class="check icon"></i>
+        Save
+    </button>
+</form>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
