Implementar ajustes no crud

--- a/src/ChurchSystem.App/Views/Donation/_DonationDetailsPartial.cshtml
+++ b/src/ChurchSystem.App/Views/Donation/_DonationDetailsPartial.cshtml
@@ -29,9 +29,9 @@
         <div class = "item">
             <div class="content">
                 <div class="header">
-                    @Html.DisplayNameFor(model => model.Member)
+                    @Html.DisplayNameFor(model => model.MemberName)
                 </div>
-                @Html.DisplayFor(model => model.Member)
+                @Html.DisplayFor(model => model.MemberName)
             </div>
         </div>
     </div>
