--- a/src/ChurchSystem.App/Views/Member/Delete.cshtml
+++ b/src/ChurchSystem.App/Views/Member/Delete.cshtml
@@ -7,6 +7,7 @@
 <h3 class="ui header">Delete member</h3>
 
 <div class="ui divider"></div>
+<partial name="/Views/Components/_ValidationSummary.cshtml" />
 
 @{ await Html.RenderPartialAsync("_MemberDetailsPartial.cshtml"); }
 
